--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -1,3 +1,4 @@
+/*
 .wrapper {
   display: flex;
   justify-content: center;
@@ -43,12 +44,29 @@ h3 {
   font-size: 25px;
 }
 
+.password-container {
+  /* margin-left: -30px; */
+/*
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  /* gap: 15px; 
+}
+
+.password-icon-container {
+}
+
 .eye-icon {
   font-size: 25px;
   cursor: pointer;
-  position: absolute;
-  z-index: 10;
-  right: 1px;
+  
+  /* position: absolute;
+  z-index: 1; */
+/* margin-right: 30px; */
+/* padding-left: -50px; */
+/* padding-bottom: 15px; 
 }
 
 input {
@@ -77,12 +95,11 @@ span {
   text-decoration: underline;
 }
 
-button {
+.signup-button {
   width: 40%;
   border: none;
   outline: none;
   height: 35px;
-  padding-top: 5px;
   border-radius: 5px;
   cursor: pointer;
   background-color: rgb(0, 140, 255);
@@ -110,8 +127,155 @@ button {
   .eye-icon {
     font-size: 20px;
   }
-  button {
+  .signup-button {
     font-size: x-small;
     width: 20%;
+  }
+}
+*/
+
+/* Wrapper for centering the form */
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(242, 242, 242);
+}
+
+/* Container for the form */
+.form-container {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  height: auto;
+  padding: 2rem;
+  gap: 1.5rem;
+  border-radius: 25px;
+  box-shadow: 5px 0px 25px rgba(0, 0, 0, 0.2);
+}
+
+h3 {
+  margin: 0;
+  font-size: 1.8rem;
+}
+
+.error-message {
+  color: red;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.input-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 1rem;
+}
+
+.icon {
+  font-size: 1.5rem;
+}
+
+.password-container {
+  width: 100%;
+}
+
+.password-icon-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: -2rem;
+  margin-right: 1rem;
+}
+
+.eye-icon {
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+input {
+  border: 0;
+  flex: 1;
+  height: 2rem;
+  padding: 0.5rem;
+  border-bottom: 2px solid rgb(200, 200, 200);
+  font-size: 1rem;
+}
+
+input:focus {
+  border-color: rgb(0, 140, 255);
+  outline: none;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  gap: 1rem;
+  margin-top: 20px;
+}
+
+span {
+  font-weight: 500;
+  color: rgb(0, 140, 255);
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.signup-button {
+  width: 80%;
+  border: none;
+  outline: none;
+  height: 2.5rem;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: rgb(0, 140, 255);
+  color: whitesmoke;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+@media screen and (max-width: 1250px) {
+  .form-container {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .form-container {
+    width: 80%;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+  }
+
+  .icon,
+  .eye-icon {
+    font-size: 1.2rem;
+  }
+
+  .signup-button {
+    font-size: 0.9rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .form-container {
+    width: 90%;
+  }
+
+  .icon,
+  .eye-icon {
+    font-size: 1rem;
+  }
+
+  .signup-button {
+    font-size: 0.8rem;
   }
 }
