--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -78,8 +78,7 @@ input:focus {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  gap: 1rem;
-  margin-top: 20px;
+  gap: 0.5rem;
 }
 
 span {
@@ -97,6 +96,19 @@ span {
   border-radius: 5px;
   cursor: pointer;
   background-color: rgb(0, 140, 255);
+  color: whitesmoke;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.button-error {
+  width: 80%;
+  border: none;
+  outline: none;
+  height: 2.5rem;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: rgb(86, 86, 86);
   color: whitesmoke;
   font-size: 1rem;
   font-weight: 500;
